--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,9 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<h2>Editing book</h2>
+<%= form_for(@book, url:"/books/#{@book.id}") do |f| %>
+	<h4>Title</h4>
+	<%= f.text_field :title %>
+	<h4>Body</h4>
+	<%= f.text_area :body %>
+	<%= f.submit "Update Book" %>
+	<p><%= link_to "show", show_book_path(@book.id) %> | <%= link_to "back", book_path %></p>
+<% end %>
