--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,25 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<h1>Books</h1>
+<!-- 一覧 -->
+<p>Title</p>
+<% @books.each do |book| %>
+<%= book.title %>
+<%= link_to "Show", show_book_path(book.id) %>
+<%= link_to "Edit", edit_book_path(book.id) %>
+<%= link_to "Destroy", destroy_book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %>
+<% end %>
+<p>Body</p>
+<% @books.each do |book| %>
+<%= book.body %>
+<% end %>
+
+
+
+<!-- 新規投稿 -->
+<h2>New book</h2>
+<%= form_for(@book, url: '/books/index') do |f| %>
+	<h4>Title</h4>
+	<%= f.text_field :title %>
+	<h4>Body</h4>
+	<%= f.text_area :body %>
+	<%= f.submit "Create Book" %>
+<% end %>
