--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,9 +1,31 @@
-<h2>Editing book</h2>
+<h1>Editing book</h1>
+<% if flash[:notice] %>
+	<div class="flash">
+		<%= flash[:notice] %>
+	</div>
+<% end %>
+
+<% if @book.errors.any? %>
+<div id="error_explanation">
+	<h2><%= @book.errors.count %> errors prohibited this book from being saved:</h2>
+	<ul>
+		<% @book.errors.full_messages.each do |m| %>
+		<li><%= m %></li>
+		<% end %>
+	</ul>
+</div>
+<% end %>
 <%= form_for(@book, url:"/books/#{@book.id}") do |f| %>
-	<h4>Title</h4>
+	<div class="field">
+		<label for="book_title">Title</label>
 	<%= f.text_field :title %>
-	<h4>Body</h4>
+	</div>
+	<div class="field">
+	<label for="book_title">Body</label>
 	<%= f.text_area :body %>
-	<%= f.submit "Update Book" %>
+	</div>
+	<div class="actions">
+		<%= f.submit "Update Book" %>
+	</div>
 	<p><%= link_to "show", show_book_path(@book.id) %> | <%= link_to "back", book_path %></p>
 <% end %>
