--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,25 +1,58 @@
 <h1>Books</h1>
 <!-- 一覧 -->
-<p>Title</p>
+<table>
+<theed>
+	<tr>
+		<th>Title</th>
+		<th>Body</th>
+		<th colspan='3'></th>
+	</tr>
+</theed>
 <% @books.each do |book| %>
-<%= book.title %>
-<%= link_to "Show", show_book_path(book.id) %>
-<%= link_to "Edit", edit_book_path(book.id) %>
-<%= link_to "Destroy", destroy_book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %>
+<tbody>
+	<tr>
+<td><%= book.title %></td>
+<td><%= book.body %></td>
+<td><%= link_to "Show", show_book_path(book.id) %></td>
+<td><%= link_to "Edit", edit_book_path(book.id) %></td>
+<td><%= link_to "Destroy", destroy_book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
+</tr>
+</tbody>
 <% end %>
-<p>Body</p>
-<% @books.each do |book| %>
-<%= book.body %>
-<% end %>
-
+</table>
 
 
 <!-- 新規投稿 -->
 <h2>New book</h2>
+<% if @book.errors.any? %>
+<div id="error_explanation">
+	<h2><%= @book.errors.count %> errors prohibited this book from being saved:</h2>
+	<ul>
+		<% @book.errors.full_messages.each do |m| %>
+		<li><%= m %></li>
+		<% end %>
+	</ul>
+</div>
+<% end %>
 <%= form_for(@book, url: '/books/index') do |f| %>
-	<h4>Title</h4>
-	<%= f.text_field :title %>
-	<h4>Body</h4>
-	<%= f.text_area :body %>
-	<%= f.submit "Create Book" %>
+	<div class="field">
+		<div class="field_with_errors">
+			<label for="book_title">Title</label>
+		</div>
+		<div class="field_with_errors">
+		<%= f.text_field :title %>
+		</div>
+	</div>
+	<div class="field">
+		<div class="field_with_errors">
+			<label for="book_body">Body</label>
+		</div>
+		<div class="field_with_errors">
+			<%= f.text_area :body %>
+		</div>
+	</div>
+	<div class="actions">
+		<%= f.submit "Create Book" %>
+	</div>
+	</div>
 <% end %>
