--- a/app/views/books/top.html.erb
+++ b/app/views/books/top.html.erb
@@ -1,6 +1,7 @@
-<h2>ようこそ <span>Bookers</span> へ!</h2>
+<h1>ようこそ <strong>Bookers</strong> へ!</h1>
 
-<p><span>Bookers</span>では、さまざまな書籍に関するあなたの意見や</p>
+<p><strong>Bookers</strong>では、さまざまな書籍に関するあなたの意見や</p>
 <p>印象を共有し交換することができます</p>
-
+<div class="start">
 <%= link_to 'start', book_path(@book) %>
+</div>
