--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -11,4 +11,4 @@
 
 <p><strong>Body:</strong><%= @book.body %></p>
 
-<p><%= link_to 'edit', edit_book_path(@book.id) %> | <%= link_to "back", book_path %></p>
+<p><%= link_to 'edit', edit_book_path(@book.id) %> | <%= link_to "back", books_path %></p>
