--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,9 @@
+<% if flash[:notice] %>
+	<div class="flash">
+		<%= flash[:notice] %>
+	</div>
+<% end %>
+
 <h1>Books</h1>
 <!-- 一覧 -->
 <table>
@@ -13,9 +19,9 @@
 	<tr>
 <td><%= book.title %></td>
 <td><%= book.body %></td>
-<td><%= link_to "Show", show_book_path(book.id) %></td>
+<td><%= link_to "Show", book_path(book.id) %></td>
 <td><%= link_to "Edit", edit_book_path(book.id) %></td>
-<td><%= link_to "Destroy", destroy_book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
+<td><%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
 </tr>
 </tbody>
 <% end %>
@@ -34,7 +40,7 @@
 	</ul>
 </div>
 <% end %>
-<%= form_for(@book, url: '/books/index') do |f| %>
+<%= form_for(@book, url: '/books') do |f| %>
 	<div class="field">
 		<div class="field_with_errors">
 			<label for="book_title">Title</label>
