--- a/app/views/books/top.html.erb
+++ b/app/views/books/top.html.erb
@@ -3,5 +3,5 @@
 <p><strong>Bookers</strong>では、さまざまな書籍に関するあなたの意見や</p>
 <p>印象を共有し交換することができます</p>
 <div class="start">
-<%= link_to 'start', book_path(@book) %>
+<%= link_to 'start', books_path %>
 </div>
